--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,194 @@
-streamlit
-pdfplumber
-langchain
-csv
-pickle
-langchain_core
-langchain_groq
-langchain_google_genai
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.4.0
+asgiref==3.8.1
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+blinker==1.8.2
+build==1.2.1
+cachetools==5.5.0
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.5.3
+click==8.1.7
+coloredlogs==15.0.1
+cryptography==43.0.0
+dataclasses-json==0.6.7
+datasets==2.21.0
+Deprecated==1.2.14
+dill==0.3.8
+diskcache==5.6.3
+distro==1.9.0
+faiss-cpu==1.8.0.post1
+fastapi==0.112.2
+filelock==3.15.4
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.6.1
+future==1.0.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.142.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+groq==0.9.0
+grpcio==1.66.0
+grpcio-status==1.62.3
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.24.6
+humanfriendly==10.0
+idna==3.7
+importlib_metadata==8.0.0
+importlib_resources==6.4.4
+Jinja2==3.1.4
+jiter==0.5.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kubernetes==30.1.0
+langchain==0.2.14
+langchain-chroma==0.1.3
+langchain-community==0.2.12
+langchain-core==0.2.34
+langchain-google-genai==1.0.10
+langchain-groq==0.1.9
+langchain-openai==0.1.22
+langchain-text-splitters==0.2.2
+langsmith==0.1.104
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+mdurl==0.1.2
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+narwhals==1.5.5
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+onnxruntime==1.19.0
+openai==1.42.0
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-instrumentation==0.47b0
+opentelemetry-instrumentation-asgi==0.47b0
+opentelemetry-instrumentation-fastapi==0.47b0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-util-http==0.47b0
+orjson==3.10.7
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.2
+pdfkit==1.0.0
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pillow==10.4.0
+posthog==3.5.2
+preprocess==2.0.0
+proto-plus==1.24.0
+protobuf==4.25.4
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
+PyMuPDF==1.24.9
+PyMuPDFb==1.24.9
+pyparsing==3.1.4
+pypdf==4.3.1
+PyPDF2==3.0.1
+pypdfium2==4.30.0
+PyPika==0.48.9
+pyproject_hooks==1.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+requests-file==2.1.0
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.20.0
+rsa==4.9
+safetensors==0.4.4
+scikit-learn==1.5.1
+scipy==1.14.1
+scrape==0.11.3
+sentence-transformers==3.0.1
+setuptools==73.0.1
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.32
+starlette==0.38.2
+streamlit==1.37.1
+sympy==1.13.2
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+tldextract==5.1.2
+tokenizers==0.19.1
+toml==0.10.2
+torch==2.4.0
+tornado==6.4.1
+tqdm==4.66.5
+transformers==4.44.2
+triton==3.0.0
+typer==0.12.5
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.2
+uvicorn==0.30.6
+uvloop==0.20.0
+watchdog==4.0.2
+watchfiles==0.23.0
+websocket-client==1.8.0
+websockets==13.0
+wrapt==1.16.0
+xxhash==3.5.0
+yarl==1.9.4
+zipp==3.20.0
