--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ diskcache==5.6.3
 distro==1.9.0
 faiss-cpu==1.8.0.post1
 fastapi==0.112.2
+fastembed==0.3.6
 filelock==3.15.4
 flatbuffers==24.3.25
 frozenlist==1.4.1
@@ -67,11 +68,13 @@ langchain==0.2.14
 langchain-chroma==0.1.3
 langchain-community==0.2.12
 langchain-core==0.2.34
+langchain-experimental==0.0.64
 langchain-google-genai==1.0.10
 langchain-groq==0.1.9
 langchain-openai==0.1.22
 langchain-text-splitters==0.2.2
 langsmith==0.1.104
+loguru==0.7.2
 lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -99,6 +102,7 @@ nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.20
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
+onnx==1.16.2
 onnxruntime==1.19.0
 openai==1.42.0
 opentelemetry-api==1.26.0
@@ -139,6 +143,7 @@ PyPDF2==3.0.1
 pypdfium2==4.30.0
 PyPika==0.48.9
 pyproject_hooks==1.1.0
+PyStemmer==2.2.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
@@ -161,6 +166,7 @@ shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+snowballstemmer==2.2.0
 SQLAlchemy==2.0.32
 starlette==0.38.2
 streamlit==1.37.1
@@ -192,4 +198,3 @@ wrapt==1.16.0
 xxhash==3.5.0
 yarl==1.9.4
 zipp==3.20.0
-pysqlite3-binary
